tests/fixtures/valid/spec_ref_impls.etcm
$spec: specs/data.etcm

impl smoke:
  train_file: "data/smoke.txt"
  retries: 2
