tests/fixtures/invalid/spec_and_spec_ref.etcm
$spec: specs/base.etcm

spec InlineSpec:
  value: int
